# ZoomInsights

./: .dockerignore  .env.example  .gitignore  Dockerfile  LOCAL_FILES_GUIDE.md  Makefile  PLAN.md  README.md  docker-compose.yml  pyproject.toml  requirements.txt
docker/: entrypoint.sh  select-and-process.sh
scripts/: process_local_recordings.sh  smoke_token.py
src/zoom_insights/: __init__.py  api.py  audio.py  backends.py  cli.py  config.py  diarization.py  digest.py  embeddings.py  enrich_insights.py  idempotency.py  insights.py  jira_export.py  logging_config.py  metrics.py  notify.py  report.py  retry.py  sanitize.py  tracker.py  transcribe.py  transcript_merge.py  zoom_client.py
tests/: conftest.py  test_api.py  test_api_concurrency.py  test_audio.py  test_backends.py  test_cli.py  test_cli_helpers.py  test_config.py  test_diarization.py  test_digest.py  test_e2e.py  test_e2e_api.py  test_e2e_diarization.py  test_e2e_digest.py  test_e2e_docker.sh  test_e2e_local_backend.py  test_e2e_notify.py  test_e2e_quality.py  test_e2e_tracker.py  test_e2e_webhook.py  test_enrich_insights.py  test_idempotency.py  test_insights.py  test_integration.py  test_jira_export.py  test_metrics.py  test_notify.py  test_report.py  test_retry.py  test_sanitize.py  test_tracker.py  test_transcribe.py  test_zoom_client.py
tests/fixtures/: recordings.json  sample.vtt
