[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "zoom-insights"
version = "0.1.0"
description = "Extract structured insights from Zoom recordings using free-tier APIs"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "groq>=0.9.0",
    "requests>=2.32.0",
    "python-dotenv>=1.0.1",
    "jsonschema>=4.23.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-mock>=3.14.0",
    "pytest-cov>=5.0.0",
    "pytest-xdist>=3.6.0",
]

[tool.setuptools]
packages = ["zoom_insights"]

[tool.setuptools.package-dir]
"" = "src"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q --strict-markers"
markers = [
    "unit: fast, fully-mocked unit tests",
    "integration: mocked integration tests spanning multiple modules",
    "e2e: end-to-end tests using real APIs (skipped if credentials absent)",
]

[project.scripts]
zoom-insights = "zoom_insights.cli:main"
